unpackaged/main/default/objects/Show_Plan__c/Show_Plan__c.object-meta.xml
<CustomObject>
    <description>A custom object to track the strategy planning details against those Show Occurrences not yet won.</description>
    <label>Show Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Show Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>