unpackaged/main/default/objects/Show_Plan__c/fields/DummyNonRelatedOppID__c.field-meta.xml
<CustomField>
    <fullName>DummyNonRelatedOppID__c</fullName>
    <label>DummyNonRelatedOppID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>