unpackaged/main/default/objects/Show_Plan__c/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Competitor that currently owns the shows under contract.  The Show Opportunity with the next oldest Show Year not associated to the Show Plan, that record&#39;s Primary Contractor is selected.</inlineHelpText>
    <label>Incumbent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Show Plans (Incumbent)</relationshipLabel>
    <relationshipName>Account_Plans4</relationshipName>
    <type>Lookup</type>
</CustomField>