unpackaged/main/default/objects/Show_Plan__c/fields/Previous_Occurrence_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Previous_Occurrence_Revenue__c</fullName>
    <inlineHelpText>The Show Opportunity with the next oldest Show Year not associated to the Show Plan, that record&#39;s Revenue is selected.</inlineHelpText>
    <label>Previous Occurrence Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>