unpackaged/main/default/objects/Show_Plan__c/fields/Proposal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Due_Date__c</fullName>
    <inlineHelpText>The Show Opportunity with the oldest Show Year associated to the Account Plan, that record&#39;s Proposal Due Date is selected.</inlineHelpText>
    <label>Proposal Due Date</label>
    <type>Date</type>
</CustomField>