unpackaged/main/default/objects/Show_Plan__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <inlineHelpText>Show the plan is associated to.</inlineHelpText>
    <label>Show Name</label>
    <referenceTo>Show__c</referenceTo>
    <relationshipLabel>Show Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>