unpackaged/main/default/objects/Show_Plan__c/fields/Show_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Show_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associated Show Opportunities to the Show Plan</inlineHelpText>
    <label>Show Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Show Plans</relationshipLabel>
    <relationshipName>Show_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>