unpackaged/main/default/objects/Show_Plan__c/fields/Total_Plan_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Plan_Revenue__c</fullName>
    <inlineHelpText>Sum of Revenue from all associated Show Opportunities</inlineHelpText>
    <label>Total Plan Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>